# soroban-savings-goal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  test.rs
test_snapshots/test/: test_create_goal_with_future_deadline_succeeds.1.json  test_emergency_withdraw_applies_penalty.1.json  test_emergency_withdraw_rejects_zero_balance.1.json  test_events_are_emitted_for_goal_lifecycle.1.json  test_goal_flow.1.json  test_multiple_goals_per_owner_are_independent.1.json  test_rejects_non_positive_values.1.json
